[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Andrea Del Corto <andrea.delcorto@vedrai.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
